force-app/main/default/objects/Client_Business_Hour__c/Client_Business_Hour__c.object-meta.xml
<CustomObject>
    <label>Client  Business Hour</label>
    <nameField>
        <label>Client Business Hours Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Business Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>