force-app/main/default/objects/Client_Business_Hour__c/fields/Friday_Time_From__c.field-meta.xml
<CustomField>
    <fullName>Friday_Time_From__c</fullName>
    <label>Friday Time From</label>
    <type>Time</type>
</CustomField>