force-app/main/default/objects/Client_Business_Hour__c/fields/Friday_Time_To__c.field-meta.xml
<CustomField>
    <fullName>Friday_Time_To__c</fullName>
    <label>Friday Time To</label>
    <type>Time</type>
</CustomField>