force-app/main/default/objects/Client_Business_Hour__c/fields/Monday_Time_From__c.field-meta.xml
<CustomField>
    <fullName>Monday_Time_From__c</fullName>
    <label>Monday Time From</label>
    <type>Time</type>
</CustomField>