force-app/main/default/objects/Client_Business_Hour__c/fields/Monday_Time_To__c.field-meta.xml
<CustomField>
    <fullName>Monday_Time_To__c</fullName>
    <label>Monday Time To</label>
    <type>Time</type>
</CustomField>