force-app/main/default/objects/Client_Business_Hour__c/fields/Saturday_Time_To__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Time_To__c</fullName>
    <label>Saturday Time To</label>
    <type>Time</type>
</CustomField>