force-app/main/default/objects/Client_Business_Hour__c/fields/Sunday_Time_From__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Time_From__c</fullName>
    <label>Sunday Time From</label>
    <type>Time</type>
</CustomField>