force-app/main/default/objects/Client_Business_Hour__c/fields/Sunday_Time_To__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Time_To__c</fullName>
    <label>Sunday Time To</label>
    <type>Time</type>
</CustomField>