force-app/main/default/objects/Client_Business_Hour__c/fields/Thursday_Time_From__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Time_From__c</fullName>
    <label>Thursday Time From</label>
    <type>Time</type>
</CustomField>