force-app/main/default/objects/Client_Business_Hour__c/fields/Thursday_Time_To__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Time_To__c</fullName>
    <label>Thursday Time To</label>
    <type>Time</type>
</CustomField>