force-app/main/default/objects/Client_Business_Hour__c/fields/Tuesday_Time_From__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Time_From__c</fullName>
    <label>Tuesday Time From</label>
    <type>Time</type>
</CustomField>