force-app/main/default/objects/Client_Business_Hour__c/fields/Tuesday_Time_To__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Time_To__c</fullName>
    <label>Tuesday Time To</label>
    <type>Time</type>
</CustomField>