force-app/main/default/objects/Client_Business_Hour__c/fields/Wednesday_Time_From__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Time_From__c</fullName>
    <label>Wednesday Time From</label>
    <type>Time</type>
</CustomField>