force-app/main/default/objects/Client_Business_Hour__c/fields/Wednesday_Time_To__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Time_To__c</fullName>
    <label>Wednesday Time To</label>
    <type>Time</type>
</CustomField>