force-app/main/default/objects/Client_Business_Hour__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Business_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>